<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="omise.charity.app.charity.charityList.MainActivity">

	<ListView
		android:id="@+id/main_activity_list_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>

	<ProgressBar
		android:id="@+id/main_activity_progress_bar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:theme="@style/Progressbar.Blue"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:visibility="visible"/>

	<TextView
		android:id="@+id/main_activity_error_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="@dimen/padding"
		android:textColor="@color/SecondaryTextColor"
		android:textSize="@dimen/error_text_size"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="This is an error, try again!"
		tools:visibility="visible"/>

</android.support.constraint.ConstraintLayout>